import a format čísla
při importu se ukládá skpn_alias vybrané osaby, hezčí formátování čísel
v přehledu výsledků osob

--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -82,12 +82,12 @@
                                     <td>{$person->name}</td>
                                     <td>{$person->center->title}</td>
                                     <td data-category="wk" class="center">{isset($weeks_distribution[$person->id]) ? $weeks_distribution[$person->id] : "."}</td>
-                                    <td data-category="maha">{isset($distribution['Mahá']) ? $distribution['Mahá'] : "."}</td>
-                                    <td data-category="big">{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
-                                    <td data-category="medium">{isset($distribution['Medium']) ? $distribution['Medium'] : "."}</td>
-                                    <td data-category="small">{isset($distribution['Small']) ? $distribution['Small'] : "."}</td>
-                                    <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
-                                    <td data-category="points">{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
+                                    <td data-category="maha">{isset($distribution['Mahá']) ? $distribution['Mahá']|decimalNumber}</td>
+                                    <td data-category="big">{isset($distribution['Big']) ? $distribution['Big']|decimalNumber}</td>
+                                    <td data-category="medium">{isset($distribution['Medium']) ? $distribution['Medium']|decimalNumber}</td>
+                                    <td data-category="small">{isset($distribution['Small']) ? $distribution['Small']|decimalNumber}</td>
+                                    <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag']|decimalNumber}</td>
+                                    <td data-category="points">{isset($book_points[$person->id]) ? $book_points[$person->id]|noescape|decimalNumber : "."}</td>
                                     <td style="display: none">
                                     {form personResultsForm-$person->id}
                                         <div class="panel-body">
@@ -134,12 +134,12 @@
                             <tfoot>
                                 <tr>
                                     <td colspan="3">TOTAL</td>
-                                    <td>{isset($category_sum_distribution['Mahá']) ? $category_sum_distribution['Mahá'] : "0"}</td>
-                                    <td>{isset($category_sum_distribution['Big']) ? $category_sum_distribution['Big'] : "0"}</td>
-                                    <td>{isset($category_sum_distribution['Medium']) ? $category_sum_distribution['Medium'] : "0"}</td>
-                                    <td>{isset($category_sum_distribution['Small']) ? $category_sum_distribution['Small'] : "0"}</td>
-                                    <td>{isset($category_sum_distribution['Mag']) ? $category_sum_distribution['Mag'] : "0"}</td>
-                                    <td>{$allsum_points|number:1}</td>
+                                    <td><div class="number-integer">{isset($category_sum_distribution['Mahá']) ? $category_sum_distribution['Mahá'] : "0"}</div></td>
+                                    <td><div class="number-integer">{isset($category_sum_distribution['Big']) ? $category_sum_distribution['Big'] : "0"}</div></td>
+                                    <td><div class="number-integer">{isset($category_sum_distribution['Medium']) ? $category_sum_distribution['Medium'] : "0"}</div></td>
+                                    <td><div class="number-integer">{isset($category_sum_distribution['Small']) ? $category_sum_distribution['Small'] : "0"}</div></td>
+                                    <td><div class="number-integer">{isset($category_sum_distribution['Mag']) ? $category_sum_distribution['Mag'] : "0"}</div></td>
+                                    <td>{$allsum_points|noescape|decimalNumber}</td>
                                 </tr>
                                 <tr>
                                     <td colspan="9">
