--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -138,6 +138,26 @@ ol.breadcrumb li.active {
 	}
 }
 
+.number-integer {
+	width: 30px;
+	text-align: right;
+	float: left;
+}
+
+.number-delimiter {
+	float: left;
+}
+
+.number-empty {
+	width: 28px;
+	text-align: right;
+}
+
+.number-decimal {
+	float: left;
+	color: rgba(103,106,108,0.6);
+}
+
 #fountainG{
 	position:absolute;
 	top: 40%;
