--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -32,6 +32,24 @@ ol.breadcrumb li.active {
 }
 
 .footable {
+	td.center {
+		text-align: center;
+	}
+
+	td.left {
+		text-align: left;
+		padding-left: 10px;
+	}
+
+	td.right {
+		text-align: right;
+		padding-right: 10px;
+	}
+
+	td.bold {
+		font-weight: bold;
+	}
+
 	thead, tfood {
 		th.wide {
 			width: 30% !important;
@@ -47,22 +65,6 @@ ol.breadcrumb li.active {
 
 		th span.footable-sort-indicator {
 			display: inline !important;
-		}
-	}
-
-	tbody {
-		td.center {
-			text-align: center;
-		}
-
-		td.left {
-			text-align: left;
-			padding-left: 10px;
-		}
-
-		td.right {
-			text-align: right;
-			padding-right: 10px;
 		}
 	}
 }
