--- a/www/less/score-table-printview.less
+++ b/www/less/score-table-printview.less
@@ -5,8 +5,10 @@
     border: 1px #7D7D7D solid;
 
     caption {
-        font-size: 18px;
-        font-weight: bold;
+        font-size: 26px;
+        color: #676a6c;
+        text-align: center;
+        margin: 10px 0 20px 0;
     }
 
     thead {
@@ -57,4 +59,8 @@
 
 .tableprint_delimiter {
     height: 30px;
+}
+
+#tableprint_centers {
+	margin-bottom: 10px;
 }
