--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -40,7 +40,7 @@
                         </div>
                         {snippet overviewTable}
                         {if count($category_distribution) == 0}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999">
                             <thead>
                                 <tr>
                                     <th class="wide noselect" data-sort-ignore="true">Jméno</th>
@@ -61,7 +61,7 @@
                             </tbody>
                         </table>
                         {else}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999" >
                             <thead>
                                 <tr>
                                     <th class="wide noselect">Jméno</th>
@@ -144,7 +144,7 @@
                                 <tr>
                                     <td colspan="9">
                                         <button onclick="window.open({link resultsTablePrintout, $week_from, $year_from, $week_to, $year_to}, 'Náhled pro tisk', 'width=900, height=700, scrollbars=yes').focus()" type="button" class="btn btn-primary tfoot-button">Zobrazit výsledkovou listinu</button>
-                                        <ul class="pagination pull-right"></ul>
+                                        <!--<ul class="pagination pull-right"></ul>-->
                                     </td>
                                 </tr>
                             </tfoot>
@@ -194,7 +194,11 @@
     <!-- Page-Level Scripts -->
     <script>
         function redrawScoreTablePrint() {
-            $('.score-tableprint').footable();
+            $('.score-tableprint').footable({
+				"paging": {
+					"size": 1000000
+				}
+			});
             renumberScoreTableOrder('#tableprint_persons');
             renumberScoreTableOrder('#tableprint_centers');
         }
