--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -47,7 +47,7 @@
                             <div id="fountainG_7" class="fountainG"></div>
                             <div id="fountainG_8" class="fountainG"></div>
                         </div>
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="resultsTable" data-page-size="20" >
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="resultsTable" data-page-size="9999999999999" >
                             <thead>
                                 <tr>
                                     <th class="noselect" style="width: 50%">Jméno</th>
