--- a/www/less/score-table-printview.less
+++ b/www/less/score-table-printview.less
@@ -8,7 +8,13 @@
         font-size: 26px;
         color: #676a6c;
         text-align: center;
-        margin: 10px 0 20px 0;
+        margin: 5px 0 10px 0;
+
+        input.editable_title {
+            width: 100%;
+            border: 0; 
+            text-align: center; 
+        }
     }
 
     thead {
