--- a/app/templates/Admin/list.latte
+++ b/app/templates/Admin/list.latte
@@ -28,8 +28,8 @@
                                 <td>{$record->username}</td>
                                 <td>{isset($record->center_id) ? $record->center->title}</td>
                                 <td class="controls">
-                                    <a class="row-delete" n:href="delete, $record->id"><span class="glyphicon glyphicon-remove"></span></a>
                                     <a class="row-edit" n:href="edit, $record->id"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="row-delete" data-delete_name="{$record->fullname}" n:href="delete, $record->id"><span class="glyphicon glyphicon-remove"></span></a>
                                 </td>
                             </tr>
                         </tbody>
