--- a/app/templates/Book/list.latte
+++ b/app/templates/Book/list.latte
@@ -42,7 +42,7 @@
                                 </td>
                                 <td class="controls"> 
                                     <a class="row-edit" n:href="edit, $book->id"><span class="glyphicon glyphicon-edit"></span></a>
-                                    <a class="row-delete" n:href="delete, $book->id"><span class="glyphicon glyphicon-remove"></span></a>
+                                    <a class="row-delete" data-delete_name="{$book->title}" n:href="delete, $book->id"><span class="glyphicon glyphicon-remove"></span></a>
                                 </td>
                             </tr>
                         </tbody>
