--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -26,8 +26,8 @@
                                 <td>{$record->name}</td>
                                 <td>{isset($record->center->title) ? $record->center->title}</td>
                                 <td class="controls">
-                                    <a class="row-delete" n:href="delete, $record->id"><span class="glyphicon glyphicon-remove"></span></a>
                                     <a class="row-edit" n:href="edit, $record->id"><span class="glyphicon glyphicon-edit"></span></a>
+                                    <a class="row-delete" data-delete_name="{$record->name}" n:href="delete, $record->id"><span class="glyphicon glyphicon-remove"></span></a>
                                 </td>
                             </tr>
                         </tbody>
