--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -40,9 +40,10 @@
                         </div>
                         {snippet overviewTable}
                         {if count($category_distribution) == 0}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999">
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table empty" id="overviewTable" data-page-size="99999999999">
                             <thead>
                                 <tr>
+                                    <th class="noselect" data-sort-ignore="true" data-sorted="false"></th>
                                     <th class="wide noselect" data-sort-ignore="true">Jméno</th>
                                     <th class="noselect" data-sort-ignore="true">Centrum</th>
                                     <th class="noselect numeric thin" data-sort-ignore="true">Wk</th>
@@ -56,7 +57,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="empty" colspan="9">V tomto období nejsou žádné výsledky</td>
+                                    <td class="empty" colspan="10">V tomto období nejsou žádné výsledky</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -330,7 +331,7 @@
                                     $.nette.success(payload);
                                     $('#overviewTable').footable();
                                     $('#overviewTable').hide();
-                                    renumberScoreTableOrder('#overviewTable', 10);
+                                    renumberScoreTableOrder('#overviewTable:not(.empty)', 10);
                                     $('#overviewTable').fadeIn();
                                     $('#fountainG').fadeOut();
                                     $(input_from).prop('disabled', false);
@@ -355,7 +356,7 @@
             picker.setFrom({$year_from}, {$week_from});
             picker.setTo({$year_to}, {$week_to}, {link personsOverview});
             
-            renumberScoreTableOrder('#overviewTable', 10);
+            renumberScoreTableOrder('#overviewTable:not(.empty)', 10);
         });
     </script>
 {/block}
